<resources>
    <string name="app_name">&appname;</string>
    <string name="server_error">Server Error</string>
    <string name="google_application_key">AIzaSyAyd90_9ihKyCAaum-7TrOKvw_ZRe9u0MU</string>
    <string name="font_default">Quicksand-Bold.otf</string>
    <string name="font_bold">Quicksand-Bold.otf</string>
    <string name="font_semi_bold">Quicksand-Bold.otf</string>
    <string name="font_bold_italic">Quicksand-BoldItalic.otf</string>
    <string name="font_italic">Quicksand-Italic.otf</string>
    <string name="font_light">Quicksand-Light.otf</string>
    <string name="font_light_italic">Quicksand-LightItalic.otf</string>
    <string name="font_regular">Quicksand-Regular.otf</string>
    <string name="font_dash">Quicksand_Dash.otf</string>
    <string name="font_book_regular">quicksand-book-regular.otf</string>
    <string name="profile">Profile</string>
    <string name="storage_permission">Write storage permission required to set profile and document images. Please select OK and provide Storage permission.</string>
    <string name="onboarding_heading_1">Search for books</string>
    <string name="onboarding_description_1">Look for your books by Title, Author,\n and even ISBN.</string>
    <string name="onboarding_heading_2">Buy used Books</string>
    <string name="onboarding_description_2">Get the books you need at a\n better price.</string>
    <string name="onboarding_heading_3">Sell your books</string>
    <string name="onboarding_description_3">Don\'t need old books? Add a listing \n and start getting offers.</string>
    <string name="onboarding_heading_4">Earn from used books</string>
    <string name="onboarding_description_4">Track your earnings and turn last \n semester\'s books into this \n semester\'s cash.</string>
    <string name="journal">Journal</string>
    <string name="ebooks">Ebooks</string>
    <string name="feed">Feed</string>
    <string name="meetings">Meetings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="actionSearch"> SEARCH </string>
    <string name="actionLanguage"> LANGUAGE </string>
    <string name="actionHome"> HOME </string>
    <string name="actionCategory"> CATEGORY </string>
    <string name="actionCategories"> CATEGORIES </string>
    <string name="actionShop"> SHOP </string>
    <string name="actionCart"> MY CART </string>
    <string name="actionOrders"> MY ORDERS </string>
    <string name="actionAccount"> MY ACCOUNT </string>
    <string name="actionAddresses"> MY ADDRESSES </string>
    <string name="actionFavourites"> MY FAVORITES </string>
    <string name="actionSettings"> SETTINGS </string>
    <string name="actionNews"> NEWS </string>
    <string name="actionIntro"> INTRO </string>
    <string name="actionAbout"> ABOUT </string>
    <string name="actionContactUs"> CONTACT US </string>
    <string name="actionLogin"> LOGIN </string>
    <string name="actionLogout"> LOGOUT </string>
    <string name="homeStyle1"> HOME STYLE 1 </string>
    <string name="homeStyle2"> HOME STYLE 2 </string>
    <string name="homeStyle3"> HOME STYLE 3 </string>
    <string name="homeStyle4"> HOME STYLE 4 </string>
    <string name="homeStyle5"> HOME STYLE 5 </string>
    <string name="categoryStyle1"> CATEGORY STYLE 1 </string>
    <string name="categoryStyle2"> CATEGORY STYLE 2 </string>
    <string name="categoryStyle3"> CATEGORY STYLE 3 </string>
    <string name="categoryStyle4"> CATEGORY STYLE 4 </string>
    <string name="categoryStyle5"> CATEGORY STYLE 5 </string>
    <string name="categoryStyle6"> CATEGORY STYLE 6 </string>
    <string name="Newest"> NEWEST </string>
    <string name="topSeller"> TOP SELLER </string>
    <string name="superDeals"> SUPER DEALS </string>
    <string name="mostLiked"> MOST LIKED </string>
    <string name="all"> All </string>
    <string name="newest"> Newest </string>
    <string name="top_seller"> Top Seller </string>
    <string name="super_deals"> Deals </string>
    <string name="most_liked"> Most Liked </string>
    <string name="recentlyViewed"> Recently Viewed </string>
    <string name="news_all"> All News </string>
    <string name="news_categories"> News Categories </string>
    <string name="news_description"> News Description </string>
    <string name="ok"> OK </string>
    <string name="and"> and </string>
    <string name="NEW"> NEW </string>
    <string name="OFF"> OFF </string>
    <string name="save"> Save </string>
    <string name="send"> Send </string>
    <string name="next"> Next </string>
    <string name="skip"> Skip </string>
    <string name="title"> Title </string>
    <string name="start"> Start </string>
    <string name="retry"> Retry </string>
    <string name="apply"> Apply </string>
    <string name="search"> Search </string>
    <string name="clear"> Clear </string>
    <string name="login"> Login </string>
    <string name="signup"> Signup </string>
    <string name="cancel"> Cancel </string>
    <string name="welcome"> Welcome </string>
    <string name="explore"> Explore </string>
    <string name="checkout"> Checkout </string>
    <string name="register"> Register </string>
    <string name="drawerOpen"> DrawerOpen </string>
    <string name="drawerClose"> DrawerClose </string>
    <string name="view"> View </string>
    <string name="date"> Date </string>
    <string name="cart"> Cart </string>
    <string name="product"> Product </string>
    <string name="products"> Products </string>
    <string name="category"> Category </string>
    <string name="categories"> Categories </string>
    <string name="final_price"> Final Price </string>
    <string name="total_price"> Total Price </string>
    <string name="product_price"> Product Price </string>
    <string name="checkout_price"> Checkout Price </string>
    <string name="product_title"> Product Title </string>
    <string name="view_product"> View Product </string>
    <string name="quantity"> Quantity </string>
    <string name="description"> Description </string>
    <string name="attributes"> Attributes </string>
    <string name="attribute_name"> Attribute Name </string>
    <string name="product_description"> Product Description </string>
    <string name="login_with"> Login with </string>
    <string name="likes"> Likes </string>
    <string name="in_stock"> In Stock </string>
    <string name="outOfStock"> Out of Stock </string>
    <string name="addToCart"> Add to Cart </string>
    <string name="removeProduct"> Remove Product </string>
    <string name="removeFromCart"> Remove from Cart </string>
    <string name="save_address"> Save Address </string>
    <string name="save_changes"> Save Changes </string>
    <string name="reset_filters"> Reset Filters </string>
    <string name="order_now"> Order Now </string>
    <string name="continue_shopping"> Continue Shopping </string>
    <string name="proceed_checkout"> Proceed Checkout </string>
    <string name="order">Order </string>
    <string name="my_order">My Order </string>
    <string name="order_id"> Order ID </string>
    <string name="order_status"> Order Status </string>
    <string name="order_date"> Order Date </string>
    <string name="order_address"> Order Address </string>
    <string name="order_details"> Order Details </string>
    <string name="order_confirmed"> Order Confirmed </string>
    <string name="order_notes"> Order Notes </string>
    <string name="order_comments"> Order Comments </string>
    <string name="no_of_products"> No. of Products </string>
    <string name="tax"> Tax </string>
    <string name="shipping"> Shipping </string>
    <string name="discount"> Discount </string>
    <string name="subtotal"> Subtotal </string>
    <string name="total"> Total </string>
    <string name="coupon"> Coupon </string>
    <string name="coupon_code"> Coupon Code </string>
    <string name="coupon_amount"> Coupon Amount </string>
    <string name="coupon_type"> Coupon Type </string>
    <string name="sample_coupons"> Sample Coupon Codes </string>
    <string name="payment_method"> Payment Method </string>
    <string name="payment_details"> Payment Details </string>
    <string name="card_number"> Card Number </string>
    <string name="expiry_month"> Expiry Month </string>
    <string name="expiry_year"> Expiry Year </string>
    <string name="card_expiry"> Card Expiry </string>
    <string name="card_cvv"> Card CVV </string>
    <string name="payPal"> PayPal </string>
    <string name="billing_address"> Billing Address </string>
    <string name="shipping_address"> Shipping Address </string>
    <string name="shipping_method"> Shipping Method </string>
    <string name="full_name"> Full Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="email"> Email </string>
    <string name="email_address"> Email Address </string>
    <string name="dob"> Date of Birth </string>
    <string name="gender"> Gender </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="fax"> Fax </string>
    <string name="mobile"> Mobile </string>
    <string name="contact_no"> Contact No </string>
    <string name="address"> Address </string>
    <string name="country"> Country </string>
    <string name="zone"> Zone </string>
    <string name="state"> State </string>
    <string name="city"> City </string>
    <string name="post_code"> Post Code </string>
    <string name="suburb"> Suburb </string>
    <string name="password"> Password </string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="new_password"> New Password </string>
    <string name="current_password"> Current Password </string>
    <string name="change_password"> Change Password </string>
    <string name="update_password"> Update Password </string>
    <string name="new_address"> New Address </string>
    <string name="update_address"> Update Address </string>
    <string name="subscribe_newsletter"> Subscribe Newsletter </string>
    <string name="thank_you"> Thank You </string>
    <string name="add_coupon"> Add Coupon? </string>
    <string name="your_message"> Your Message </string>
    <string name="empty_cart"> Your Cart is Empty!</string>
    <string name="record_not_found"> No Record Found </string>
    <string name="select_manually">Select it manually</string>
    <string name="welcome_to_app_name">Welcome to &appname;</string>
    <string name="lets_first_check_that">Let\'s first check that we deliver\n to your address</string>
    <string name="select_your_location">Select your location</string>
    <string name="confirm">Confirm</string>
    <string name="use_my_current_location">Use My Current Location</string>
    <string name="name">Name</string>
    <string name="get_otp">Get Otp</string>
    <string name="signup_for_account">Signup for an account</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="your_order_is_is_confirmed">Your Order is Confirmed</string>
    <string name="we_deliver_it_right">We Deliver it right</string>
    <string name="whenever_you_are">Wherever you are, we will reach you area. \nDon\'t worry</string>
    <string name="estimated_delivery_time">Est Delivery Time</string>
    <string name="back_to_home">Back to home</string>
    <string name="raise_an_issue">Raise an issue</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="what_you_want_to_search_today">What you want to search today?</string>
    <string name="fab_deal">Fab &amp; Deal</string>
    <string name="food_drinks">Food &amp; Drinks</string>
    <string name="spas">Spas</string>
    <string name="saloons">Saloons</string>
    <string name="jewellery">Jewellery</string>
</resources>