<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/location_card_height"
        android:layout_margin="@dimen/margin_10"
        app:cardCornerRadius="@dimen/margin_7"
        >
        <LinearLayout
            style="@style/match_match"
            android:layout_margin="@dimen/margin_10"
            android:orientation="vertical">
            <com.app.community.widget.CustomTextView
                style="@style/match_wrap"
                android:text="@string/select_your_location"
                android:gravity="center_horizontal"
                android:textSize="@dimen/textSize_20"
                app:customFont="@string/font_bold"
                android:layout_marginTop="@dimen/margin_10"/>
            <com.app.community.widget.CustomEditText
                android:id="@+id/edCity"
                style="@style/match_wrap"
                android:hint="@string/city"
                android:textSize="@dimen/textSize_20"
                app:customFont="@string/font_default"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/margin_10"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/grey_corner_bg"/>
            <com.app.community.widget.CustomEditText
                style="@style/match_wrap"
                android:hint="@string/state"
                android:textSize="@dimen/textSize_20"
                app:customFont="@string/font_default"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/margin_10"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/grey_corner_bg"/>
            <com.app.community.widget.CustomTextView
                android:id="@+id/tvConfirm"
                style="@style/match_wrap"
                android:text="@string/confirm"
                android:textSize="@dimen/textSize_18"
                android:gravity="center_horizontal"
                app:customFont="@string/font_bold"
                android:elevation="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginEnd="@dimen/margin_40"
                android:padding="@dimen/margin_17"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:background="@drawable/blue_round_btnbg"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>