<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            style="@style/match_wrap"
            android:orientation="vertical"
            android:background="@color/white">
            <com.app.community.widget.CustomTextView
                style="@style/match_wrap"
                android:text="@string/your_order_is_is_confirmed"
                android:gravity="center_horizontal"
                android:textColor="@color/darker_blackish"
                app:customFont="@string/font_bold"
                android:textSize="@dimen/textSize_20"
                android:layout_marginTop="@dimen/margin_25" />
            <LinearLayout
                style="@style/layout_ver_match_1">
            <ImageView
                style="@style/wrap_wrap"
                android:src="@drawable/confirm"
                />
            </LinearLayout>
            <LinearLayout
                style="@style/layout_ver_match_1"
                android:orientation="vertical">
            <com.app.community.widget.CustomTextView
                style="@style/textview_header_small_match"
                android:text="@string/we_deliver_it_right"
                android:gravity="center"
                app:customFont="@string/font_bold"
                />
                <com.app.community.widget.CustomTextView
                    style="@style/textview_title_match"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/whenever_you_are"
                    android:gravity="center"
                    app:customFont="@string/font_bold"
                    android:textColor="@color/color_dark_grey"
                    />
                <LinearLayout
                    style="@style/match_wrap"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_25">
                <com.app.community.widget.CustomTextView
                    style="@style/textview_title_wrap"
                    android:text="@string/estimated_delivery_time"
                    android:gravity="center"
                    app:customFont="@string/font_bold"
                    android:textColor="@color/color_dark_grey"
                    />
                <com.app.community.widget.CustomTextView
                    style="@style/textview_title_wrap"
                    android:text="29:00"
                    app:customFont="@string/font_bold"
                    android:textColor="@color/color_blue"
                    />
                </LinearLayout>
                <com.app.community.widget.CustomTextView
                    style="@style/textview_title_wrap"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_20"
                    android:paddingStart="@dimen/margin_50"
                    android:paddingEnd="@dimen/margin_50"
                    android:text="@string/back_to_home"
                    android:textAllCaps="true"
                    android:gravity="center_horizontal"
                    android:elevation="@dimen/margin_5"
                    android:paddingTop="@dimen/margin_12"
                    android:paddingBottom="@dimen/margin_12"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_button_medium"
                    app:customFont="@string/font_bold"
                    android:background="@drawable/blue_round_btnbg" />

                <com.app.community.widget.CustomTextView
                    style="@style/textview_description_small_match"
                    android:padding="@dimen/margin_10"
                    android:text="@string/raise_an_issue"
                    android:gravity="center"
                    app:customFont="@string/font_bold"
                    android:textColor="@color/reddish"
                    />
            </LinearLayout>
        </LinearLayout>


</layout>